1GJ6M3Q: ITPHELP:WINNT - properties files

--- a/org.eclipse.help.ui/plugin.xml
+++ b/org.eclipse.help.ui/plugin.xml
@@ -82,7 +82,7 @@
    <!-- Context Help contribution for this plugin  --> 
    <!-- ========================================== -->
    <extension point="org.eclipse.help.contexts"> 
-      <contexts name="HelpContexts.xml"/> 
+      <contexts name="contexts.xml"/> 
    </extension>
   
    <!-- Define the help menu action set -->
