--- a/org.eclipse.help.webapp/webapp.properties
+++ b/org.eclipse.help.webapp/webapp.properties
@@ -34,3 +34,4 @@ IndexingPleaseWait=Please wait while the online information is indexed. This wil
 Bookmarks = Bookmarks
 BookmarkPage = Bookmark document
 addBookmark=There are currently no bookmarks. To add one, press the bookmark icon on the main toolbar while browsing a topic.
+Help=Help
