--- a/org.eclipse.help.webapp/webapp.properties
+++ b/org.eclipse.help.webapp/webapp.properties
@@ -35,3 +35,8 @@ Bookmarks = Bookmarks
 BookmarkPage = Bookmark document
 addBookmark=There are currently no bookmarks. To add one, press the bookmark icon on the main toolbar while browsing a topic.
 Help=Help
+# This must be cleaned up, as we have both lower case and upper case keywords
+search=Search Results
+toc=Contents
+links=Links
+bookmarks=Bookmarks
