*** empty log message ***

--- a/org.eclipse.help/preferences.ini
+++ b/org.eclipse.help/preferences.ini
@@ -11,7 +11,7 @@ bookmarks=
 # Customization for jsp pages
 ##############################
 
-# either a dir relative to this plugin, or /pluginid/dir
+# either a dir relative to org.eclipse.help.webapp plugin, or /pluginid/dir
 imagesDirectory=images
 
 #colours
