--- a/org.eclipse.help.webapp/.classpath
+++ b/org.eclipse.help.webapp/.classpath
@@ -2,6 +2,7 @@
 <classpath>
     <classpathentry kind="src" path="src"/>
     <classpathentry kind="src" path="srcurl"/>
+    <classpathentry kind="src" path="src_infocenter"/>
     <classpathentry kind="src" path="/org.eclipse.core.runtime"/>
     <classpathentry kind="src" path="/org.apache.xerces"/>
     <classpathentry kind="src" path="/org.eclipse.help"/>
