--- a/org.eclipse.help.webapp/web.xml
+++ b/org.eclipse.help.webapp/web.xml
@@ -7,7 +7,12 @@
 
 <web-app>
 
-   <servlet>
+    <servlet>
+        <servlet-name>control</servlet-name>
+        <servlet-class>org.eclipse.help.servlet.ControlServlet</servlet-class>
+    </servlet>
+    
+    <servlet>
         <servlet-name>content</servlet-name>
         <servlet-class>org.eclipse.help.servlet.ContentServlet</servlet-class>
     </servlet>
@@ -170,6 +175,11 @@
 	</servlet>
 
     <!-- ***** end precompiled JSP config ***** -->
+    
+    <servlet-mapping>
+        <servlet-name>control</servlet-name>
+        <url-pattern>/control.html</url-pattern>
+    </servlet-mapping>
     
 	<servlet-mapping>
 		<servlet-name>content</servlet-name>
