*** empty log message ***

--- a/org.eclipse.help/plugin.xml
+++ b/org.eclipse.help/plugin.xml
@@ -38,10 +38,19 @@
 		<handler protocol="livehelp" class="org.eclipse.help.internal.protocols.URLHandler"/> 
 	</extension> 
 	
+	<!-- Stand-alone infocenter application -->
+	<extension point="org.eclipse.core.runtime.applications" id="infocenterApplication">
+		<application> 
+			<run class="org.eclipse.help.internal.HelpApplication">
+				<parameter name="infocenter" value="true"/> 
+			</run>
+		</application>
+	</extension>
 	<!-- Stand-alone help application -->
 	<extension point="org.eclipse.core.runtime.applications" id="helpApplication">
 		<application> 
 			<run class="org.eclipse.help.internal.HelpApplication">
+				<parameter name="infocenter" value="false"/> 
 			</run>
 		</application>
 	</extension>
