*** empty log message ***

--- a/org.eclipse.help.webapp/webapp.properties
+++ b/org.eclipse.help.webapp/webapp.properties
@@ -42,5 +42,6 @@ toc=Contents
 links=Links
 bookmarks=Bookmarks
 Views=Navigation Views
+noLiveHelpInInfocenter=You must run help locally to perform "active help" actions.
 
 
