--- a/org.eclipse.help.webapp/build.properties
+++ b/org.eclipse.help.webapp/build.properties
@@ -3,16 +3,15 @@ custom=true
 # properties for building a plugin; create project source folder - temp.folder/WEB-INF/lib/jsp.jar.src source before using pde to generate skeleton script
 #source.WEB-INF/lib/webapp.jar=src/
 #source.WEB-INF/lib/jsp.jar=${temp.folder}/WEB-INF/lib/jsp.jar.src/
-#source.eclipseurl.jar=srcurl/
 #src.includes=about.html
-#bin.includes=images/,ns4/,WEB-INF/,*.css,*.html,*.js,*.jsp,plugin.properties,plugin.xml,webapp.properties
+#bin.includes=advanced/,basic/,WEB-INF/,*.css,*.html,*.js,*.jsp,plugin.properties,plugin.xml,webapp.properties
 #bin.excludes=cpl-v10.html,notice.html,WEB-INF/classes/
-#jars.compile.order=WEB-INF/lib/webapp.jar,eclipseurl.jar,WEB-INF/lib/jsp.jar
+#jars.compile.order=WEB-INF/lib/webapp.jar,WEB-INF/lib/jsp.jar
 #jars.extra.classpath=../org.eclipse.tomcat/servlet.jar,../org.eclipse.tomcat/jasper-runtime.jar
 
 # properties for building an infocenter web app
 #source.WEB-INF/lib/webapp.jar=src/
 #src.includes=cpl-v10.html,notice.html
-#bin.includes=images/,ns4/,WEB-INF/,*.css,*.html,*.js,*.jsp,webapp.properties
+#bin.includes=advanced/,basic/,WEB-INF/,*.css,*.html,*.js,*.jsp,webapp.properties
 #bin.excludes=about.html,WEB-INF/classes/
 #jars.extra.classpath=../org.eclipse.tomcat/servlet.jar
