--- a/org.eclipse.help.webapp/src/webapp.properties
+++ b/org.eclipse.help.webapp/src/webapp.properties
@@ -19,6 +19,7 @@ Links=Links
 Bookshelf=Table of Contents
 Toggle=Toggle Navigation
 Synch=Show in Table of Contents
+SynchNav=Refresh / Show current topic
 shortSynch=Sync
 Print=Print Page
 Close=Close
