--- a/org.eclipse.help.ui/.classpath
+++ b/org.eclipse.help.ui/.classpath
@@ -10,5 +10,6 @@
     <classpathentry kind="src" path="/org.eclipse.core.boot"/>
     <classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
     <classpathentry kind="src" path="/org.eclipse.help.appserver"/>
+    <classpathentry kind="src" path="/org.eclipse.help.base"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
