--- a/org.eclipse.help.ui/.project
+++ b/org.eclipse.help.ui/.project
@@ -8,6 +8,7 @@
 		<project>org.eclipse.core.runtime</project>
 		<project>org.eclipse.help</project>
 		<project>org.eclipse.help.appserver</project>
+		<project>org.eclipse.help.base</project>
 		<project>org.eclipse.search</project>
 		<project>org.eclipse.tomcat</project>
 		<project>org.eclipse.ui</project>
