--- a/org.eclipse.help.ui/plugin.xml
+++ b/org.eclipse.help.ui/plugin.xml
@@ -15,6 +15,7 @@
    <requires>
       <import plugin="org.eclipse.core.resources"/>
       <import plugin="org.eclipse.help"/>
+      <import plugin="org.eclipse.help.base"/>
       <import plugin="org.eclipse.help.appserver"/>
       <import plugin="org.eclipse.search"/>
       <import plugin="org.eclipse.ui"/>
