--- a/org.eclipse.help.webapp/.classpath
+++ b/org.eclipse.help.webapp/.classpath
@@ -8,5 +8,6 @@
     <classpathentry kind="src" path="/org.eclipse.core.runtime"/>
     <classpathentry kind="lib" path="/org.eclipse.tomcat/servlet.jar"/>
     <classpathentry kind="src" path="/org.eclipse.core.boot"/>
+    <classpathentry kind="src" path="/org.eclipse.help.base"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
