--- a/org.eclipse.help.webapp/.project
+++ b/org.eclipse.help.webapp/.project
@@ -7,6 +7,7 @@
 		<project>org.eclipse.core.boot</project>
 		<project>org.eclipse.core.runtime</project>
 		<project>org.eclipse.help</project>
+		<project>org.eclipse.help.base</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
