--- a/org.eclipse.help.webapp/plugin.xml
+++ b/org.eclipse.help.webapp/plugin.xml
@@ -14,6 +14,7 @@
    <requires>
       <import plugin="org.apache.xerces"/>
       <import plugin="org.eclipse.help"/>
+      <import plugin="org.eclipse.help.base"/>
    </requires>
 
 
