--- a/org.eclipse.help.ui/plugin.xml
+++ b/org.eclipse.help.ui/plugin.xml
@@ -25,7 +25,7 @@
    <extension
          point="org.eclipse.ui.helpSupport">
       <config
-            class="org.eclipse.help.ui.internal.DefaultHelp">
+            class="org.eclipse.help.ui.internal.DefaultHelpUI">
       </config>
    </extension>
 <!-- Preference pages -->
