--- a/org.eclipse.help.ui/plugin.xml
+++ b/org.eclipse.help.ui/plugin.xml
@@ -4,7 +4,7 @@
    name="%help_system_plugin_name"
    version="3.0.0"
    provider-name="%providerName"
-   class="org.eclipse.help.ui.internal.WorkbenchHelpPlugin">
+   class="org.eclipse.help.ui.internal.HelpUIPlugin">
 
    <runtime>
       <library name="helpworkbench.jar">
