cleaning preference documentation

--- a/org.eclipse.help.ui/build.properties
+++ b/org.eclipse.help.ui/build.properties
@@ -10,5 +10,5 @@
 ###############################################################################
 source.helpui.jar=src/
 src.includes=schema/,about.html
-bin.includes=icons/,doc/,contexts*.xml,plugin.xml,*.jar,plugin.properties,about.html,.options
+bin.includes=icons/,contexts*.xml,plugin.xml,*.jar,plugin.properties,about.html,.options
 
