--- a/org.eclipse.help/build.properties
+++ b/org.eclipse.help/build.properties
@@ -10,5 +10,5 @@
 ###############################################################################
 source.help.jar=src/
 src.includes=schema/,about.html
-bin.includes=doc/,dtd/,html/,livehelp.js,plugin.xml,preferences.ini,*.jar,plugin.properties,about.html,.options
+bin.includes=dtd/,livehelp.js,plugin.xml,preferences.ini,*.jar,plugin.properties,about.html,.options
 
