*** empty log message ***

--- a/org.eclipse.help.webapp/plugin.properties
+++ b/org.eclipse.help.webapp/plugin.properties
@@ -8,11 +8,7 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 ###############################################################################
-help_plugin_name = Help System Webapp
+help_webapp_plugin_name = Help System Webapp
 providerName=Eclipse.org
-helpcontents = Browse &Help Contents
-help = Help
-help_view = Help
-openhelpcontents = Open Help Contents
 
 
