--- a/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/HelpUIResources.properties
+++ b/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/HelpUIResources.properties
@@ -45,6 +45,7 @@ AppserverPreferencePage.portDescription = &Port for the server to listen on.  Se
 AppserverPreferencePage.Note = Note:
 AppserverPreferencePage.requireRestart = If the server is already running, these preferences will only take effect\n\
 after restarting.
+AppserverPreferencePage.invalidPort = Port must be a number in the range 0-65535
 
 # ContextHelpDialog
 ContextHelpDialog.open = An error occurred when opening context-sensitive help pop-up.
