--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -56,6 +56,7 @@ search=Search Results
 toc=Contents
 links=Links
 bookmarks=Bookmarks
+searchTooComplex=Search request too complex.
 
 Views=Navigation Views
 noLiveHelpInInfocenter=You must run help locally to perform "active help" actions.
