21386 Help uses xerces implementation classes instead of APIs

--- a/org.eclipse.help/src/org/eclipse/help/internal/HelpResources.properties
+++ b/org.eclipse.help/src/org/eclipse/help/internal/HelpResources.properties
@@ -33,3 +33,5 @@ E037 = IOException occurred, when accessing Zip file {0}.  File might not be loc
 E038 = IOException occurred, when resolving URL {0}.
 E039 = Problems occurred reading plug-in preferences.
 E044 = Exception occurred creating help content producer for plug-in{0}.
+TocFileParser.PCE = SAXParser implementation could not be loaded.
+ContextsFileParser.PCE = SAXParser implementation could not be loaded.
