--- a/org.eclipse.help.webapp/.classpath
+++ b/org.eclipse.help.webapp/.classpath
@@ -2,12 +2,10 @@
 <classpath>
     <classpathentry kind="src" path="src"/>
     <classpathentry kind="src" output="WEB-INF/classes" path="src_servlets"/>
-    <classpathentry kind="src" path="/org.apache.xerces"/>
-    <classpathentry kind="src" path="/org.eclipse.help"/>
-    <classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
-    <classpathentry kind="src" path="/org.eclipse.core.runtime"/>
-    <classpathentry kind="lib" path="/org.eclipse.tomcat/servlet.jar"/>
-    <classpathentry kind="src" path="/org.eclipse.core.boot"/>
     <classpathentry kind="src" path="/org.eclipse.help.base"/>
+    <classpathentry kind="src" path="/org.eclipse.core.boot"/>
+    <classpathentry kind="src" path="/org.eclipse.core.runtime"/>
+    <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+    <classpathentry kind="lib" path="/org.eclipse.tomcat/servlet.jar"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
