135107 [Help] Allow users to use .html/.htm file extension for XHTML content

--- a/org.eclipse.help.base/plugin.xml
+++ b/org.eclipse.help.base/plugin.xml
@@ -163,7 +163,7 @@
    <extension
          point="org.eclipse.help.base.luceneSearchParticipants">
       <searchParticipant
-            content-type="org.eclipse.help.xhtml"
+            extensions="xhtml"
             id="org.eclipse.help.base.xhtml"
             participant="org.eclipse.help.internal.search.XHTMLSearchParticipant"
             headless="true"/>
