--- a/org.eclipse.ua.tests/plugin.xml
+++ b/org.eclipse.ua.tests/plugin.xml
@@ -254,6 +254,8 @@
        <toc file="data/help/toc/extraContent/simple_toc.xml" />
        <toc file="data/help/search/toc.xml" primary="true"/>
        <toc file="data/help/producer/toc.xml" primary="true"/>
+       <toc file="data/help/index/toc.xml" primary="true"/>
+       <toc file="data/help/index/tocIgnored.xml" primary="true"/>
    </extension>
 
    <!--
@@ -297,6 +299,12 @@
    <extension point= "org.eclipse.help.contentExtension"> 
       <contentExtension file="data/help/search/extension.xml"/>
       <contentExtension file="data/help/search/extension2.xml"/>
+   </extension>
+   <extension
+         point="org.eclipse.help.index">
+      <index
+            file="data/help/index/index.xml">
+      </index>
    </extension>
 
 </plugin>
