152178 [Help] Need a "home" button in help system

--- a/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
+++ b/org.eclipse.help.webapp/src/org/eclipse/help/internal/webapp/WebappResources.properties
@@ -40,6 +40,7 @@ CannotSync=The current document displayed does not exist in the table of content
 JavaScript_disabled=This page requires JavaScript.  You need to enable JavaScript in your web browser, restart the browser, and return to this page.
 back_tip = Go Back
 forward_tip = Go Forward
+home_tip = Home
 noTopic=The topic that you have requested is not available. The link may be wrong, or you may not have the corresponding product feature installed. This online help only includes documentation for features that are installed.
 contentProducerException=The content producer for this document encountered an internal error while processing the document.
 IndexingPleaseWait=Please wait while the online information is indexed. This will happen only once.
