--- a/org.eclipse.ua.tests/build.properties
+++ b/org.eclipse.ua.tests/build.properties
@@ -21,4 +21,5 @@ output.ua-tests.jar = bin/
 source.ua-tests.jar = base/,\
                       cheatsheet/,\
                       help/,\
-                      intro/
+                      intro/,\
+                      forms/
